[tool.poetry]
name = "quick-start-local-models"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sglang = {extras = ["openai"], version = "^0.1.9"}
aiohttp = "^3.9.1"
psutil = "^5.9.8"
uvicorn = "^0.27.0"
uvloop = "^0.19.0"
fastapi = "^0.109.0"
huggingface-hub = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
