[tool.poetry]
name = "quick-start-local-models"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sglang = {extras = ["openai"], version = "^0.1.9"}
aiohttp = "^3.9.1"
psutil = "^5.9.8"
uvicorn = "^0.27.0"
uvloop = "^0.19.0"
fastapi = "^0.109.0"
huggingface-hub = "^0.20.3"
torch = "^2.1.2"
transformers = "^4.37.1"
zmq = "^0.0.0"
rpyc = "^5.3.1"
interegular = "^0.3.3"
lark = "^1.1.9"
cloudpickle = "^3.0.0"
diskcache = "^5.6.3"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
