[tool.poetry]
name = "quick-start-openai"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sglang = {extras = ["all"], version = "^0.1.9"}
numpy = "^1.26.3"
tqdm = "^4.66.1"
openai = "^1.10.0"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
